--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "src/assets/styles/rainbow.css"
-
+              "src/styles.css"
             ],
             "scripts": []
           },
